styles/style.css
body{
    font-family: 'Cantarell', sans-serif;
}

.login-form {
    margin-top: 50px;

}
.login{
    width: 300px;
}

.error{
    display: inline-block;
    text-align: left;
    padding-left: 5px;
    color: red;
}

h1{
    text-align: center; 
}



.form-group {
    position: relative;
    margin-top: 15px;
    margin-bottom: 15px;
}
.input-group {
    position: relative;
}
.form-control {
    display: block;
    height: 36px;
    width: 100%; 
    border: none;
    border-radius: 0 !important;

    font-size: 16px;
    font-weight: 300;
    padding: 0;
    background-color: transparent;
    box-shadow: none;
    border-bottom: 1px solid #757575;
}
.input-group .form-control {
    position: relative;
    z-index: inherit;
    float: inherit;
    width: 100%;
    margin-bottom: 0;
}
.form-control:focus {
    border-color: #757575;
    outline: none;
    box-shadow: none;
}

/* -- label styles ---------------------------------- */
label {
    position: absolute;
    top: -18px;
    color: #999;
    font-size: 12px;
    font-weight: 300;

    transition: 0.2s ease all;
    -moz-transition: 0.2s ease all;
    -webkit-transition: 0.2s ease all;
}

/* help-block */
.form-group .help-block {
    position: absolute;
}

.help-block {
    color: #bdbdbd; 
    font-size: 12px;
    font-weight: 300;
}


.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
    background-color: transparent;
    border-bottom-style: dashed;
}

.navbar{
    border-radius: 0px;
    margin-top: -50px;

}

.wholenav a{
    color: white;
}
.wholenav a:hover{
    color: white;
    font-weight: bold;
}

.jumbotron { 
    background-image:url('../imgs/header.png');
    background-size: 2000px 650px; 
    background-repeat: no-repeat;
    height: 650px;
}

.jumbotronlogin { 
    background-image:url('../imgs/header.png');
    background-size: 100% 100%; 
    background-repeat: no-repeat;
    height: 700px;
    margin-top: 120px;
}

navbar-nav a:hover{
    color: green;
}

.controlpanel{
    font-size: 19px;
}
.italic{
    font-style: italic;
    font-size: 15px;
}
.landingheader{
    color: #0eb493;
    font-weight: bold;
}

.landnghr{
    margin-left: 100px;
}

.landingicons{
    margin-top: 150px;
    color: white;
    font-family: 'Cantarell', sans-serif;
    text-align: center;


}

.landingicons h3{
    font-size: 22px;
}

.landingicon{
    padding-left: 2%;
    padding-right: 2%;
}

.add{
    margin-top: 100px;
    color: #0eb493;
    font-size: 1.5em;
}
.buslanding{
    float: right;
    margin-right: 270px;
    margin-top: 5px;
}

.garagelanding{
    float: right;
    margin-right: 250px;
    margin-top: 5px;
}

.driverlanding{
    float: right;
    margin-right: 260px;
    margin-top: 5px;
}

.spacing{
    height: 200px;
    background-color: white;
}

.viewgstbl{
    margin-top: 50px;
    margin-bottom: 100px;
}

.gsheader{
    margin-bottom: 50px;
    color: #0eb493;
    font-weight: bold;
    border-color: #eeeeee;
    border-style: solid;
    border-width: 0px 0px 1px 0px;
}

.cntrltitle{
    padding-top: 75px;
}
.hrtitle{
    padding-bottom: 75px;
}

.contactpanels {
    background-color: #cccccc;
    border-radius: 5px;
    margin-bottom: 20px;

}

.contactpanels table {
    border: none;
    margin-top: 15px;
    margin-bottom: 15px;
    margin-left: 15px;
    font-size: 15px;
    color: white;
    font-weight: bold;
}

#map {
    height: 200px;
    margin-top: 60px;
    margin-left: 20px;
    padding-bottom: 0px;
    margin-bottom: 0px;
}

.footer{
    color: #cccccc;
    font-weight: bold;
    margin-bottom: 0px;
    padding-bottom: 0px;
    text-align: center;
}
.footerelemnts{

    border-color: #0eb493;
    border-style: solid;
    border-width: 0px 0px 1px 0px;
}

